# STLVisualizerProject

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  EBO.cpp  EBO.h  ImGuiWindowBase.cpp  ImGuiWindowBase.h  InputController.cpp  InputController.h  LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  OptionsWindow.cpp  OptionsWindow.h  README.md  STLVisualizerProject.cpp  STLVisualizerProject.sln  STLVisualizerProject.vcxproj  STLVisualizerProject.vcxproj.filters  Scene.h  Source.cpp  Source.cpp.bak  UBO.cpp  UBO.h  VAO.cpp  VBO.h  Vertex.cpp  Vertex.h  default.frag  default.vert  imgui.ini  shaderClass.cpp  shaderClass.cpp.bak  shaderClass.h  stl.cpp  stl.h  (+1 more)
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
docs/: STL Visualiser Diagram.drawio
src/: main.cpp  main.h
src/Core/: Camera.h  Drawable.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
src/File/: FileChoiceDialog.cpp  FileChoiceDialog.h  Stl.cpp
src/Input/: InputController.h
src/Rendering/: UBO.cpp  UBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shaderClass.cpp  shaderClass.h
src/UI/: ImGuiWindowBase.cpp  ImGuiWindowBase.h  OptionsWindow.cpp  OptionsWindow.h  StartupWindow.cpp  StartupWindow.h
